fixed btn z-index

--- a/room-status/room-status.css
+++ b/room-status/room-status.css
@@ -26,6 +26,7 @@ html, body {
   font-size: 15px;
   text-transform: uppercase;
   cursor: pointer;
+  z-index: 2000;
 }
 
 section {
